--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Hello, world! I'm David Freeman
-description: > # this means to ignore newlines until "baseurl:"
+title: Hello, world! I'm dengzongzheng #
+description: 个人博客，记录点滴。># this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
